<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.angel.mycook.Register">


    <Button
        android:id="@+id/button_cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ET_register_pass2"
        android:layout_alignStart="@+id/ET_register_pass2"
        android:layout_below="@+id/ET_register_pass2"
        android:layout_marginTop="17dp"
        android:onClick="cancel_registry"
        android:text="@string/cancel" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/ET_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/insert_name" />

    <EditText
        android:id="@+id/ET_register_pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET_register_username"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/insert_pass"
        android:inputType="textPassword"
        android:layout_alignLeft="@+id/ET_register_username"
        android:layout_alignStart="@+id/ET_register_username"
        android:layout_alignRight="@+id/ET_register_username"
        android:layout_alignEnd="@+id/ET_register_username" />


    <EditText
        android:id="@+id/ET_register_pass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:layout_below="@+id/ET_register_pass1"
        android:layout_alignLeft="@+id/ET_register_pass1"
        android:layout_alignStart="@+id/ET_register_pass1"
        android:layout_alignRight="@+id/ET_register_pass1"
        android:layout_alignEnd="@+id/ET_register_pass1" />


    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_cancel"
        android:layout_alignBottom="@+id/button_cancel"
        android:layout_alignEnd="@+id/ET_register_pass2"
        android:layout_alignRight="@+id/ET_register_pass2"
        android:onClick="register_person"
        android:text="@string/register" />


</RelativeLayout>
