<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context="com.example.angel.mycook.MyProfile">

    <Button
        android:id="@+id/btn_meal_plan_restrictions"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="0dp"
        android:text="@string/MealPlanRestrictions"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="66dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/btn_my_preferences"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_changePassword"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="0dp"
        android:text="@string/ChangePassword"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="66dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/btn_meal_plan_restrictions"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/MyProfile"
        android:textAlignment="center"
        android:textSize="30sp" />



    <TextView
        android:id="@+id/tvUSERLOGADO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="TextView" />

    <Button
        android:id="@+id/btn_my_preferences"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="0dp"
        android:text="@string/MyPreferences"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="66dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/tvUSERLOGADO"
        android:layout_alignLeft="@+id/btn_meal_plan_restrictions"
        android:layout_alignStart="@+id/btn_meal_plan_restrictions" />




</RelativeLayout>
