<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.angel.mycook.MainActivity">




    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/login"
        android:layout_below="@+id/ETpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/ETusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/insert_name" />

    <EditText
        android:id="@+id/ETpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ETusername"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/insert_pass"
        android:inputType="textPassword"
        android:layout_alignLeft="@+id/ETusername"
        android:layout_alignStart="@+id/ETusername"
        android:layout_alignRight="@+id/ETusername"
        android:layout_alignEnd="@+id/ETusername" />

</RelativeLayout>
